--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             --primary: #0a0202;
             --secondary: #c00000;
         }
+	    .footer__top-grid {
+    grid-template-columns: repeat(2, 1fr);
+}
     </style>
 
 </head>
