--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
                     
 
 				<p><strong>"Ucz się przedsiębiorczości od przedsiębiorców"</strong> to projekt użytkowniczek Bielańskiego Integratora Przedsiębiorczych, sfinansowany przez Urząd Dzielnicy Bielany. </p><p>
-Koncept i teksty: Ewa Pietruszczak - <a href="https://www.linkedin.com/in/ewa-pietruszczak-662a471/">linkedin</a></br>
-			    Opracowanie graficzne, montaż filmów, skład, wdrożenie: <a href="mailto:m.oplatowska@gmail.com">Martyna Opłatowska</a></br>
-Dziękujemy za wsparcie i udział w projekcie: <a href="https://www.dzialzagraniczny.pl/">Dział Zagraniczny</a>, <a href="https://www.ballsquad.pl/#/">Ballsquad</a>, <a href="https://cafedelaposte.pl/">Cafe de la Poste</a></p>
-<p>luty 2022</p>
+Koncept i teksty: Ewa Pietruszczak - <a href="https://www.linkedin.com/in/ewa-pietruszczak-662a471/">linkedin</a>.</br>
+			    Opracowanie graficzne, montaż filmów, skład, wdrożenie: <a href="mailto:m.oplatowska@gmail.com">Martyna Opłatowska</a>.</br>
+Dziękujemy za wsparcie i udział w projekcie: <a href="https://www.dzialzagraniczny.pl/">Dział Zagraniczny</a>, <a href="https://www.ballsquad.pl/#/">Ballsquad</a>, <a href="https://cafedelaposte.pl/">Cafe de la Poste</a>.</p>
+<p>Realizacja: luty 2022</p>
                         
                 </div>
             </div>
