--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         </div>
                         <div class="wp-block-column" style="text-align: center;">
 
-                            <a href="https://integrator.naszebielany.pl/" target="_blank"><img src="assets/logo_bip.png" style="height:150px;"></a>
+                            <a href="https://integrator.naszebielany.pl/" target="_blank"><img src="assets/logo_BIP.png" style="height:150px;"></a>
                             <a href="https://bielany.um.warszawa.pl/" target="_blank"><img src="assets/logo_bielany.png" style="height:150px;"></a>
 
                         </div>
